--- a/joining_node_test1/13.config
+++ b/joining_node_test1/13.config
@@ -3,6 +3,6 @@
 	"protocol"  : "tcp",
 	"ipAddress" : "127.0.0.1",
 	"port"	    : "7013",
-	"persistentStorageContainer" : {"file" : "/home/vm2/go/src/github.com/robcs621/proj2/testdir/dict3_13.gob"},
+	"persistentStorageContainer" : {"file" : "dict3_13.gob"},
 	"methods"   : ["lookup", "insert", "insertOrUpdate", "delete", "listKeys", "listIDs", "shutdown"] 
 }
