updated test_nodes to reflect new join member field in config file

--- a/joining_node_test2/14.config
+++ b/joining_node_test2/14.config
@@ -4,5 +4,6 @@
 	"ipAddress" : "127.0.0.1",
 	"port"	    : "7014",
 	"persistentStorageContainer" : {"file" : "dict3_14.gob"},
-	"methods"   : ["lookup", "insert", "insertOrUpdate", "delete", "listKeys", "listIDs", "shutdown"] 
+	"methods"   : ["lookup", "insert", "insertOrUpdate", "delete", "listKeys", "listIDs", "shutdown"],
+	"join" : {"ipAddress" : "127.0.0.1", "port" : "7001"}  
 }
