--- a/joining_node_test3/15.config
+++ b/joining_node_test3/15.config
@@ -4,5 +4,6 @@
 	"ipAddress" : "127.0.0.1",
 	"port"	    : "7015",
 	"persistentStorageContainer" : {"file" : "dict3_15.gob"},
-	"methods"   : ["lookup", "insert", "insertOrUpdate", "delete", "listKeys", "listIDs", "shutdown"] 
+	"methods"   : ["lookup", "insert", "insertOrUpdate", "delete", "listKeys", "listIDs", "shutdown"],
+	"join" : {"ipAddress" : "127.0.0.1", "port" : "7001"}  
 }
